force-app/main/default/objects/leaseworks__Matching_Transactions__c/leaseworks__Matching_Transactions__c.object-meta.xml
<CustomObject>
    <label>Z_Unused_2012 Matching Transaction</label>
    <nameField>
        <label>Z_Unused_2012 Matching Transactions Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Z_Unused_2012 Matching Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>