force-app/main/default/objects/leaseworks__Matching_Transactions__c/fields/leaseworks__Aircraft_In_Transaction__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Aircraft_In_Transaction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aircraft In Transaction</label>
    <referenceTo>leaseworks__Aircraft_In_Transaction__c</referenceTo>
    <relationshipName>Matching_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>