force-app/main/default/objects/leaseworks__Matching_Transactions__c/fields/leaseworks__Currently_Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Currently_Assigned_To__c</fullName>
    <formula>leaseworks__Aircraft_In_Transaction__r.leaseworks__Aircraft__r.leaseworks__Assigned_To__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currently Assigned To</label>
    <type>Text</type>
</CustomField>