force-app/main/default/objects/leaseworks__Matching_Transactions__c/fields/leaseworks__Market_Intelligence__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Market_Intelligence__c</fullName>
    <label>Market Intelligence</label>
    <referenceTo>leaseworks__Aircraft_Need__c</referenceTo>
    <relationshipName>Matching_Transactions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>