force-app/main/default/objects/leaseworks__Matching_Transactions__c/fields/leaseworks__Purchase_Price__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Purchase_Price__c</fullName>
    <formula>leaseworks__Aircraft_In_Transaction__r.leaseworks__Price__c</formula>
    <label>Price ($M)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>